--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="core.jar"/>
+	<classpathentry kind="lib" path="libs/core.jar"/>
+	<classpathentry kind="lib" path="libs/org.eclipse.jgit-3.1.0.201310021548-r-javadoc.jar"/>
+	<classpathentry kind="lib" path="libs/org.eclipse.jgit-3.1.0.201310021548-r.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
